turtleart.lessons.turtleart.Main.Stairs.scala.error
Source:6: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^Source:10: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^Source:14: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^Source:18: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^Source:22: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^Source:26: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
gauche()(90:Double)
      ^